# tape

./: .gitignore  .stylish-haskell.yaml  README.md  package.yaml  stack.yaml  tape.cabal
src/: Args.hs  Main.hs  MainExe.hs  ShortcutsAndStuff.hs  Tape.hs  Util.hs
src-tape/: Main.hs
src/Tape/: Main.hs  Tape.hs
