name:                tape
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/oshyshko/tape
license:             BSD3
license-file:        LICENSE
author:              Oleksandr Shyshko
maintainer:          oshyshko@gmail.com
copyright:           2018 Oleksandr Shyshko
category:            TODO
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable tape
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , cmdargs
                     , directory
                     , process
                     , time
                     , mtl
                     , unix
  ghc-options:         -Wall
                       -- -rtsopts=all -prof
                       -fwarn-incomplete-patterns
                       -fno-warn-type-defaults
                       -fno-warn-unused-do-bind
                       -fno-warn-unused-imports
  other-modules:       Util
                     , Tape.Main
                     , Tape.Tape
