name:                tape
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/oshyshko/tape
license:             BSD3
license-file:        LICENSE
author:              Oleksandr Shyshko
maintainer:          oshyshko@gmail.com
copyright:           2018 Oleksandr Shyshko
category:            TODO
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Tape
                     , ShortcutsAndStuff
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , directory
                     , process
                     , time
                     , mtl
                     , unix
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fwarn-incomplete-patterns
                       -fno-warn-unused-do-bind
                       -- -fno-warn-unused-imports

executable tape
  hs-source-dirs:      src-tape
  main-is:             Main.hs
  build-depends:       tape
                     , base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , cmdargs
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -- -rtsopts=all -prof
                       -fwarn-incomplete-patterns
                       -fno-warn-unused-do-bind
                       -- -fno-warn-unused-imports
